--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -2,13 +2,15 @@
     padding: 3rem 0;
 }
 .about-content{
-    gap: 4rem;
+    gap: 2rem;
 }
 .about-title{
     margin: 1rem 0;
+    margin-left: -160px;
 }
 .about-img img{
-    max-width: 520px;
+    max-width: 470px;
+    margin-top: 68px;
 }
 .about-text p{
     margin: 1.8rem 0;
